# blogp

./: Procfile  package-lock.json  pyproject.toml  requirements.txt
BlogPetProject/: settings.py
cypress/e2e/: sample_spec.js  spec.cy.js
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
