[tool.poetry]
name = "requirements-txt"
version = "0.1.0"
description = ""
authors = ["Salimboevm <salimboyevm@gmail.com>"]
readme = "README.md"
packages = [{include = "requirements"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
